--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
     ],
     "require": {
         "slim/slim": "^3.5"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^3.1"
     }
 }
