--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "slim/slim": "^3.5",
-        "slim/twig-view": "2.1"
+        "slim/twig-view": "2.1",
+        "symfony/mailer": "^5.4"
     },
     "require-dev": {
         "symfony/var-dumper": "^3.1"
