--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "slim/slim": "^3.5",
         "slim/twig-view": "2.1",
-        "symfony/mailer": "^5.4"
+        "symfony/mailer": "^5.4",
+        "respect/validation": "^2.2"
     },
     "require-dev": {
         "symfony/var-dumper": "^3.1"
